/*
 * This gradle configuration compiles and packages YouScope.
 */

// Gradle plugins
plugins {
	id 'application'
	id 'eclipse'
	id 'edu.sc.seis.launch4j' version '2.4.6'
}

application {
	executableDir = ''
	mainClassName = 'org.youscope.starter.Starter'
	applicationDefaultJvmArgs = ['-Djava.library.path=drivers64', '-Dpython.console.encoding=UTF-8']
}
allprojects {
    tasks.withType(JavaExec) {
        workingDir = new File("distribution")
    }
    tasks.withType(Copy) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
    tasks.withType(Tar) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
    tasks.withType(Zip) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}

// Empty task to prevent unnecessary copying of libs by launch4j
task emptyTask{
}

// Configuration to create the exe files for YouScope
// See https://github.com/TheBoegl/gradle-launch4j for details
launch4j {
   dontWrapJar = true
   headerType = 'gui'
   jar = "lib/youscope.jar"
   errTitle = 'YouScope'
   copyConfigurable = rootProject.tasks.emptyTask.outputs.files
   
   cmdLine = ""
   chdir = '.'
   priority = 'normal'
   downloadUrl = "http://java.com/download"
   supportUrl = 'http://www.youscope.org'
   stayAlive = false
   restartOnCrash = false
   manifest = ""
   icon = "${rootProject.projectDir}/resources/windows/YouScope.ico"
   classpath = ['lib/youscope.jar']
   mainClassName = "org.youscope.starter.Starter"
   
   bundledJre64Bit = false
   bundledJreAsFallback = false
   jreMinVersion = "17.0.0" 
   initialHeapSize = 256
   initialHeapPercent = 10
   maxHeapSize = 1024
   maxHeapPercent = 50
  
   splashFileName = "${rootProject.projectDir}/resources/windows/splash.bmp"
   splashWaitForWindows = true
   splashTimeout = 60
   splashTimeoutError = true
    
   fileDescription = 'YouScope - Microscope Control Environment'
   copyright = 'Andreas P. Cuny & Moritz Lang, info@youscope.org'
   productName = "YouScope - Microscope Control Environment"
   companyName = "YouScope.org"
   internalName = "YouScope"
   language = "ENGLISH_US"
}
// 64 bit version of exe
createExe {
    outfile = 'YouScope64.exe'
    jreRuntimeBits = "64"
    jvmOptions = ["-Dpython.console.encoding=UTF-8",
              "-Djava.library.path=drivers64",
              "--enable-native-access=ALL-UNNAMED",
              "--add-opens=java.base/java.util=ALL-UNNAMED",
              "--add-opens=java.base/java.lang=ALL-UNNAMED",
              "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
              "--add-opens=java.base/java.text=ALL-UNNAMED",
              "--add-opens=java.base/java.math=ALL-UNNAMED",
              "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED"]
	variables = ['PATH=%EXEDIR%\\drivers64;%PATH%']
}

// Delete annoying start scripts. We are using exe's instead!
startScripts {
    doLast {
        delete windowsScript
		delete unixScript
    }
}

// global variables
ext.archivesBaseName = "youscope"
ext.version = '2.4.0'

// Basic subprojects of youscope
project(':core')
{
	subprojects {
		apply plugin: 'java'
		group = 'org.youscope'
		version = rootProject.version
		repositories {
		   flatDir {
			   dirs '../../libs'
		   }
		}
		jar.archiveName = "${rootProject.archivesBaseName}-${project.name}.${jar.extension}"
		
		jar.doFirst{
			manifest{
				def manif = "${projectDir}/src/main/resources/META-INF/MANIFEST.MF"
				if (new File(manif).exists()) {
					from file(manif)
				}
				else
				{
					attributes(
						'Class-Path'	 : configurations.compile.collect { it.getName() }.join(' ')
					)
				}
				attributes(
					'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
					'Build-Version'  : rootProject.ext.version,
					'Created-By'     : "Gradle ${gradle.gradleVersion}",
					'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
					'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
				)
			}
		}
	}
}
// root project
jar.doFirst{
	manifest{
			def manif = "${projectDir}/src/main/resources/META-INF/MANIFEST.MF"
			if (new File(manif).exists()) {
				from file(manif)
			}
			else
			{
				attributes(
					'Class-Path'	 : configurations.compile.collect { it.getName() }.join(' ')
				)
			}
			attributes(
				'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
				'Build-Version'  : rootProject.ext.version,
				'Created-By'     : "Gradle ${gradle.gradleVersion}",
				'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
				'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
			)
		}
}


project(':core:api')
{
	dependencies {
        implementation name: 'xstream-1.4.2'
    }	
}
project(':core:server')
{
	dependencies {
        implementation project(':core:api')
		implementation name: 'xstream-1.4.2'
    }
}
project(':core:client')
{
	dependencies {
        implementation project(':core:api')
		implementation name: 'xstream-1.4.2'
		implementation name: 'jcommon-1.0.17'
		implementation name: 'jfreechart-1.0.14'
		implementation name: 'zxing-core-1.7'
		implementation name: 'zxing-j2se-1.7'
		runtimeOnly name: 'fugue-icons-2.6.4'
    }
}

// Plugin subprojects of youscope
project(':plugins')
{
	subprojects {
		apply plugin: 'java'
		group = 'org.youscope'
		version = rootProject.version
		repositories {
		   flatDir {
			   dirs '../../libs'
		   }
		}
		jar.archiveName = "${rootProject.archivesBaseName}-${project.name}.${jar.extension}"
		
		dependencies {
			implementation project(':core:api')
			implementation name: 'xstream-1.4.2'
		}
		
		jar.doFirst{
			manifest{
				def manif = "${projectDir}/src/main/resources/META-INF/MANIFEST.MF"
				if (new File(manif).exists()) {
					from file(manif)
				}
				else
				{
					attributes(
						'Class-Path'	 : '../lib/youscope-common.jar ../lib/youscope-addon.jar ../lib/xstream-1.4.2.jar'
					)
				}
				attributes(
					'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
					'Build-Version'  : rootProject.ext.version,
					'Created-By'     : "Gradle ${gradle.gradleVersion}",
					'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
					'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
				)
			}
		}
	}
}

allprojects {
    tasks.withType(JavaCompile) {
        sourceCompatibility = '1.7'
        targetCompatibility = '1.7'
    } 
}

dependencies {
	repositories {
	   flatDir {
		   dirs 'libs'
	   }
	}
    runtimeOnly project(':core:server')
    runtimeOnly project(':core:client')
	project(':plugins')
	{
		subprojects {
			runtimeOnly project(':plugins:' + project.name)
		}
	}
}

///////////////////////////////////
// Define distribution structure
///////////////////////////////////
task externalLibs {
    def libs = file("${rootProject.projectDir}/libs")
    outputs.dir libs
}

task addMSVC {
    def msvc = file("${rootProject.projectDir}/msvc")
    outputs.dir msvc
}

// Populated by CI from the Temurin JDK 21 installation.
task bundledRuntime {
    def runtime = file("${rootProject.projectDir}/runtime")
    outputs.dir runtime
}

// Package distribution
distributions {
    nsis {
		distributionBaseName = 'nsis'
		// copy everything which is in the /distribution folder.
		contents {
            from 'distribution'
        }
        contents {
            from(addMSVC)
			{
				into 'msvc'
			}
        }
        contents {
            from(bundledRuntime) {
                into 'runtime'
            }
			from(createExe)
			{
				into ''
			}
			from(externalLibs) {
                into 'lib'
            }
			project(':') {
				from(jar) {
					into 'lib'
				}
			}
			project(':core:api') {
				from(jar) {
					into 'lib'
				}
			}
			project(':core:client') {
				from(jar) {
					into 'lib'
				}
			}
			project(':core:server') {
				from(jar) {
					into 'lib'
				}
			}
			project(':plugins') {
				subprojects {
					from(jar) {
						into 'plugins'
					}
				}
			}
        }
    }
}

// work around for bugs in installNsisDist on github
installNsisDist {
	def installDir = file("${rootProject.buildDir}/install/nsis")
	def msvcDir = new File(installDir, "msvc")
	def libDir = new File(installDir, "lib")
	def binDir = new File(installDir, "bin")
	// make the wrongly required directories before they are checked for
	doFirst {
		mkdir installDir
		mkdir msvcDir
		mkdir libDir
		mkdir binDir
	}
	// remove them after the check
	doLast {
		println "Installing distribution to $installDir."
		binDir.deleteDir()
	}
}

def nsisSrc   = file("${rootProject.projectDir}/resources/nsis")   // YouScope.nsi + YouScope.ico + splash.bmp
def nsisStage = file("${rootProject.buildDir}/install/nsis")

tasks.register('createInstaller', Exec) {
    group = 'distribution'
    description = 'Builds the 64-bit YouScope installer with the system makensis.'
    dependsOn 'installNsisDist'

    doFirst {
        // Colocate the .nsi and its bare-path assets (YouScope.ico, splash.bmp)
        // with the staged lib/, plugins/, runtime/ so that OutFile, MUI_ICON and
        // the FILE "lib\*" / "plugins\*.jar" lines all resolve against this dir.
        copy {
            from nsisSrc
            into nsisStage
        }
    }

    def makensis = System.getenv('MAKENSIS') ?: 'makensis'
    workingDir nsisStage
    commandLine makensis, '/V3', 'YouScope.nsi'

    doLast {
        copy {
            from file("${nsisStage}/YouScope_64bit_Installer.exe")
            into layout.buildDirectory.dir('distributions')
        }
        println "Installer -> ${buildDir}/distributions/YouScope_64bit_Installer.exe"
    }
}

// 64-bit only. Compatibility alias for existing scripts.
task createInstallers {
    dependsOn ":createInstaller"
}
createInstallers.group = createInstaller.group
createInstallers.description = "Creates the 64-bit YouScope installer"
